--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
+    <meta name="theme-color" content="#000000" />    <meta
       name="description"
       content="一个简单易用的博客系统"
     />
-    <title>我的博客</title>
+    <title>根娟一起跳</title>
   </head>
   <body>
     <noscript>您需要启用 JavaScript 才能运行此应用。</noscript>
